# TRABALHO01-SISTEMAS-DISTRIBUIDOS

./: .env  .gitignore  README.md  main.py  pyproject.toml
core/book/: repositories.py  usecases.py
core/user/: auth.py  usecases.py
firebase/: config.py  firebase_config.json
gui/auth/: auth_window.py  main_window.py
gui/home/: home.py  home_window.py
